--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="css/redcolor.css" />
     
     <!-- Live Style Switcher Color -->
-    <link rel="stylesheet" class="alternate-style" title="pink" href="css/redcolor.css" />
+    <link rel="stylesheet" class="alternate-style" title="pink" href="css/redcolor.css" disabled/>
     <link rel="stylesheet" class="alternate-style" title="green" href="css/greencolor.css" disabled/>
     <link rel="stylesheet" class="alternate-style" title="yellow" href="css/yellowcolor.css" disabled/>
     <link rel="stylesheet" class="alternate-style" title="orange" href="css/orangecolor.css" disabled/>
-    <link rel="stylesheet" class="alternate-style" title="blue" href="css/bluecolor.css" disabled/>
+    <link rel="stylesheet" class="alternate-style" title="blue" href="css/bluecolor.css" />
     <link rel="stylesheet" href="css/styleSwitcher.css" type="text/css">
 
   </head>
@@ -22,7 +22,7 @@
       <!-- Aside -->
       <div class="aside">
         <div class="logo">
-          <a href="#">FizarWeb</a>
+          <a href="#">AGENT87</a>
         </div>
         <!-- Nav Toggler -->
         <div class="nav-toggler">
@@ -51,7 +51,7 @@
         </ul>
         <!-- End Nav -->
         <!-- Copyright -->
-        <div class="copyright-text">&copy; Fizar Rama Waluyo 2020</div>
+        <div class="copyright-text">&copy; Kayonga Arnaud 2021</div>
         <!-- End Copyright -->
       </div>
       <!-- End Aside -->
@@ -63,8 +63,8 @@
           <div class="container">
             <div class="intro">
               <img src="images/profile.jpg" alt="Profile" class="shadow-dark" />
-              <h1>Fizar Rama Waluyo</h1>
-              <p>I'm a Web Developer</p>
+              <h1>Arnaud Kayonga</h1>
+              <p>I'm a Software Engineer</p>
               <div class="social-links">
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -88,7 +88,7 @@
               <div class="about-content pl-15">
                 <div class="row">
                   <div class="about-text ">
-                    <h3>I'm Fizar Rama Waluyo as <span>Web Developer</span></h3>
+                    <h3>I'm Kayonga Arnaud as <span>Software Engineer</span></h3>
                     <p>
                       Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                       Dolorum, soluta harum quidem commodi magnam autem adipisci
@@ -102,31 +102,25 @@
                   <div class="personal-info">
                     <div class="row">
                       <div class="info-item">
-                        <p>Birthday : <span>14 November 2001</span></p>
+                        <p>Birthday : <span>14 September</span></p>
                       </div>
                       <div class="info-item ">
-                        <p>Age : <span>20</span></p>
+                        <p>Age : <span>22</span></p>
                       </div>
                       <div class="info-item ">
-                        <p>Website : <span>fizardev.my.id</span></p>
+                        <p>Website : <span>agent87.github.io</span></p>
                       </div>
                       <div class="info-item ">
-                        <p>Email : <span>Fizardev@gmail.com</span></p>
+                        <p>Email : <span>arnaulkayonga1@gmail.com</span></p>
                       </div>
                       <div class="info-item ">
-                        <p>Phone : <span>+62895636659028</span></p>
+                        <p>Phone : <span>+250783089337</span></p>
                       </div>
                       <div class="info-item ">
                         <p>
-                          City :
-                          <span>Majalengka</span>
+                          Location :
+                          <span>Kigali, Rwanda</span>
                         </p>
-                      </div>
-                      <div class="info-item ">
-                        <p>Province : <span>West Java</span></p>
-                      </div>
-                      <div class="info-item ">
-                        <p>Post Code : <span>45472</span></p>
                       </div>
                     </div>
                     <div class="row">
@@ -139,31 +133,31 @@
                   <div class="skills">
                     <div class="row">
                       <div class="skill-item">
-                        <h5>Javascript</h5>
+                        <h5>Python</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 86%"></div>
                           <div class="skill-percent">86%</div>
                         </div>
                       </div>
                       <div class="skill-item">
-                        <h5>PHP</h5>
+                        <h5>PostgreSQL</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 86%"></div>
-                          <div class="skill-percent">86%</div>
+                          <div class="skill-percent">66%</div>
                         </div>
                       </div>
                       <div class="skill-item">
-                        <h5>Bootstrap</h5>
+                        <h5>Tensorflow 2.0</h5>
                         <div class="progress">
-                          <div class="progress-in" style="width: 96%"></div>
-                          <div class="skill-percent">96%</div>
+                          <div class="progress-in" style="width: 46%"></div>
+                          <div class="skill-percent">46%</div>
                         </div>
                       </div>
                       <div class="skill-item">
-                        <h5>Vue JS</h5>
+                        <h5>Solid Edge</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 50%"></div>
-                          <div class="skill-percent">50%</div>
+                          <div class="skill-percent">60%</div>
                         </div>
                       </div>
                     </div>
@@ -178,25 +172,9 @@
                           <!-- Timeline-item -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2007-2013</h6>
-                            <h4 class="timeline-title">SDN 1 Rajagaluh</h4>
-                            <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
-                          </div>
-                          <!-- End Timeline-item -->
-                          <!-- Timeline-item -->
-                          <div class="timeline-item">
-                            <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2013-2016</h6>
-                            <h4 class="timeline-title">SMPN 1 Rajagaluh</h4>
-                            <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
-                          </div>
-                          <!-- End Timeline-item -->
-                          <!-- Timeline-item -->
-                          <div class="timeline-item">
-                            <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2016-2019</h6>
-                            <h4 class="timeline-title">SMKN 1 Rajagaluh</h4>
-                            <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2021-2023</h6>
+                            <h4 class="timeline-title">Houston Community College</h4>
+                            <p class="timeline-text">Associate Degree in Artificial Inteligence.</p>
                           </div>
                           <!-- End Timeline-item -->
                         </div>
@@ -211,24 +189,24 @@
                           <!-- Timeline-item -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2007-2013</h6>
-                            <h4 class="timeline-title">SDN 1 Rajagaluh</h4>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2018-Present</h6>
+                            <h4 class="timeline-title">KAYARN MECHATRONICS</h4>
                             <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
                           </div>
                           <!-- End Timeline-item -->
                           <!-- Timeline-item -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2013-2016</h6>
-                            <h4 class="timeline-title">SMPN 1 Rajagaluh</h4>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2019-2019</h6>
+                            <h4 class="timeline-title">Westerwelle Startup Haus Kigali</h4>
                             <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
                           </div>
                           <!-- End Timeline-item -->
                           <!-- Timeline-item -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2016-2019</h6>
-                            <h4 class="timeline-title">SMKN 1 Rajagaluh</h4>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2017-2019</h6>
+                            <h4 class="timeline-title">Fablab Rwanda</h4>
                             <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
                           </div>
                           <!-- End Timeline-item -->
@@ -255,14 +233,14 @@
               <div class="service-item">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-laptop"></i></div>
-                  <h4>Web Design</h4>
+                  <h4>Machine Learning</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur exercitationem ipsa fugiat aliquid, odit aspernatur.</p>
                 </div>
               </div>
               <div class="service-item">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-photo"></i></div>
-                  <h4>Photography</h4>
+                  <h4>CAD Design</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur exercitationem ipsa fugiat aliquid, odit aspernatur.</p>
                 </div>
               </div>
@@ -276,21 +254,21 @@
               <div class="service-item">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-film"></i></div>
-                  <h4>Video Editing</h4>
+                  <h4>GUI Design</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur exercitationem ipsa fugiat aliquid, odit aspernatur.</p>
                 </div>
               </div>
               <div class="service-item">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-paint-brush"></i></div>
-                  <h4>Vector Art</h4>
+                  <h4>3D Printing</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur exercitationem ipsa fugiat aliquid, odit aspernatur.</p>
                 </div>
               </div>
               <div class="service-item">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-rocket"></i></div>
-                  <h4>SEO Optimize</h4>
+                  <h4>Finance Metrics</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur exercitationem ipsa fugiat aliquid, odit aspernatur.</p>
                 </div>
               </div>
@@ -310,59 +288,67 @@
             <div class="row">
               <div class="portfolio-filter">
                 <button type="button" class="active" data-filter="all">All</button>
-                <button type="button" data-filter="web-design">Web Design</button>
-                <button type="button" data-filter="vector">Vector</button>
-                <button type="button" data-filter="web-dev">Web Development</button>
+                <button type="button" data-filter="Machine-Learning">Machine-Learning</button>
+                <button type="button" data-filter="web-design">Web-Development</button>                
+                <button type="button" data-filter="Software-Engineering">Software-Engineering</button>
+                <button type="button" data-filter="Robotics">Robotics</button>
+                <button type="button" data-filter="Iot">Iot</button>
+                <button type="button" data-filter="Data-Science">Data-Science</button>
+                <button type="button" data-filter="Miscellaneous">Miscellaneous</button>
+                <button type="button" data-filter="Manufacturing">Manufacturing</button>
+                <button type="button" data-filter="Finance-Models">Finance-Models</button>                
+                <button type="button" data-filter="CNC-Programming">CNC-Programming</button>                
+                <button type="button" data-filter="CAD-Design">CAD-Design</button>
               </div>
             </div>
             <div class="row portfolio-items p-0">
               <!-- Portfolio Item -->
-              <div class="portfolio-item p-15" data-category="web-design">
+              <div class="portfolio-item p-15" data-category= "Machine-Learning">
                 <div class="portfolio-item-inner">
                   <div class="portfolio-img">
                     <img src="images/1.png" alt="portfolio">
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>Object Detection Using YoloV3</h4>
                     <div class="icon"><i class="fa fa-search"></i></div>
                   </div>
                 </div>
               </div>
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
-              <div class="portfolio-item p-15" data-category="vector">
+              <div class="portfolio-item p-15" data-category="Machine-Learning">
                 <div class="portfolio-item-inner">
                   <div class="portfolio-img">
                     <img src="images/2.png" alt="portfolio">
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>Automatic Car Plate Detection</h4>
                     <div class="icon"><i class="fa fa-search"></i></div>
                   </div>
                 </div>
               </div>
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
-              <div class="portfolio-item p-15" data-category="vector">
+              <div class="portfolio-item p-15" data-category="CAD-Design">
                 <div class="portfolio-item-inner">
                   <div class="portfolio-img">
                     <img src="images/3.png" alt="portfolio">
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>Reverse Engineering 3D Products</h4>
                     <div class="icon"><i class="fa fa-search"></i></div>
                   </div>
                 </div>
               </div>
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
-              <div class="portfolio-item p-15" data-category="web-dev">
+              <div class="portfolio-item p-15" data-category="Data-Science">
                 <div class="portfolio-item-inner">
                   <div class="portfolio-img">
                     <img src="images/4.png" alt="portfolio">
                   </div>
                   <div class="portfolio-info">
-                    <h4>Web Design</h4>
+                    <h4>Garming Data Analytics with R</h4>
                     <div class="icon"><i class="fa fa-search"></i></div>
                   </div>
                 </div>
@@ -404,9 +390,9 @@
                     </div>
                   </div>
                   <div class="blog-info ">
-                    <h4 class="blog-title">Responsive Web Design</h4>
+                    <h4 class="blog-title">Django Based Car Parking Managment Dashboard</h4>
                     <p class="blog-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto rem vel ea! Placeat obcaecati dolore inventore itaque id, beatae harum repudiandae, minus.</p>
-                    <p class="blog-tags">Tags : <a href="#">Html</a>, <a href="#">css</a></p>
+                    <p class="blog-tags">Tags : <a href="#">Django</a>,<a href="#">Python</a>,<a href="#">Html</a>, <a href="#">css</a></p>
                   </div>
                 </div>
               </div>
@@ -457,21 +443,21 @@
               <div class="contact-info-item">
                 <div class="icon"><i class="fa fa-phone"></i></div>
                 <h4>Call Me On</h4>
-                <p>+62 8956 3665 9028</p>
+                <p>+(250) 783089337</p>
               </div>
               <!-- End Contact Info Item -->
               <!-- Contact Info Item -->
               <div class="contact-info-item">
                 <div class="icon"><i class="fa fa-map-marker"></i></div>
                 <h4>Address</h4>
-                <p>42 Blok Wage, Rajagaluh, Majalengka, 45472</p>
+                <p>KG 21 St, Kigali, Rwanda.</p>
               </div>
               <!-- End Contact Info Item -->
               <!-- Contact Info Item -->
               <div class="contact-info-item">
                 <div class="icon"><i class="fa fa-envelope"></i></div>
                 <h4>Email</h4>
-                <p>Fizardev@gmail.com</p>
+                <p>arnaulkayonga1@gmail.com</p>
               </div>
               <!-- End Contact Info Item -->
             </div>
