--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="home section active" id="home">
           <div class="container">
             <div class="intro">
-              <img src="images/profile.jpg" alt="Profile" class="shadow-dark" />
+              <img src="images/myprofile.jpg" alt="Profile" class="shadow-dark" />
               <h1>Arnaud Kayonga</h1>
               <p>I'm a Software Engineer</p>
               <div class="social-links">
