--- a/index.html
+++ b/index.html
@@ -386,13 +386,13 @@
                   <div class="blog-img">
                     <img src="images/1.png" alt="blog">
                     <div class="blog-date">
-                      4 Jun 2020
+                      4 July 2021
                     </div>
                   </div>
                   <div class="blog-info ">
                     <h4 class="blog-title">Django Based Car Parking Managment Dashboard</h4>
                     <p class="blog-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto rem vel ea! Placeat obcaecati dolore inventore itaque id, beatae harum repudiandae, minus.</p>
-                    <p class="blog-tags">Tags : <a href="#">Django</a>,<a href="#">Python</a>,<a href="#">Html</a>, <a href="#">css</a></p>
+                    <p class="blog-tags">Tags : <a href="#">Django</a>, <a href="#">Django-REST-Framework</a>, <a href="#">Heroku</a>, <a href="#">PostgreSQL</a>, <a href="#">Python</a>, <a href="#">HTML</a>, <a href="#">CSS</a></p>
                   </div>
                 </div>
               </div>
@@ -401,13 +401,13 @@
                   <div class="blog-img">
                     <img src="images/1.png" alt="blog">
                     <div class="blog-date">
-                      4 Jun 2020
+                      4 Jun 2018
                     </div>
                   </div>
                   <div class="blog-info">
-                    <h4 class="blog-title">Responsive Web Design</h4>
+                    <h4 class="blog-title">Password Guessing Genetic Algorithm</h4>
                     <p class="blog-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto rem vel ea! Placeat obcaecati dolore inventore itaque id, beatae harum repudiandae, minus.</p>
-                    <p class="blog-tags">Tags : <a href="#">Html</a>, <a href="#">css</a></p>
+                    <p class="blog-tags">Tags : <a href="#">Python</a>, <a href="#">Machine-Learning</a>, <a href="#">Genetic Algorithm</a>,<a href="#">Metaheuristic</a>,<a href="#">css</a></p>
                   </div>
                 </div>
               </div>
