--- a/index.html
+++ b/index.html
@@ -426,6 +426,21 @@
                   </div>
                 </div>
               </div>
+              <div class="blog-item p-15">
+                <div class="blog-item-inner shadow-dark">
+                  <div class="blog-img">
+                    <img src="images/1.png" alt="blog">
+                    <div class="blog-date">
+                      4 Jun 2021
+                    </div>
+                  </div>
+                  <div class="blog-info">
+                    <h4 class="blog-title">Responsive Web Design</h4>
+                    <p class="blog-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto rem vel ea! Placeat obcaecati dolore inventore itaque id, beatae harum repudiandae, minus.</p>
+                    <p class="blog-tags">Tags : <a href="#">Html</a>, <a href="#">css</a></p>
+                  </div>
+                </div>
+              </div>
             </div>
         </section>
         <!-- End Blog Section -->
