--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portofolio</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/redcolor.css" />
+    <link rel="stylesheet" href="css/bluecolor.css" />
     
     <!-- Live Style Switcher Color -->
     <link rel="stylesheet" class="alternate-style" title="pink" href="css/redcolor.css" disabled/>
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/styleSwitcher.css" type="text/css">
 
   </head>
-  <body>
+  <body data-new-gr-c-s-check-loaded="14.1022.0" data-gr-ext-installed="" class="dark">
     <!-- Main Container -->
     <div class="main-conteiner">
       <!-- Aside -->
@@ -558,10 +558,10 @@
 
       <h5>Body Skin</h5>
       <label>
-        <input type="radio" name="body-style" class="body-skin" value="light" checked="true"> Light
+        <input type="radio" name="body-style" class="body-skin" value="light" > Light
       </label>
       <label>
-        <input type="radio" name="body-style" class="body-skin" value="dark"> Dark
+        <input type="radio" name="body-style" class="body-skin" value="dark" checked="true"> Dark
       </label>
     </div>
     <!-- End Live Style Switcher Color -->
