--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <h1>Arnaud Kayonga</h1>
               <p>I'm a Software Engineer</p>
               <div class="social-links">
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="http://www.twitter.com/kayarn_"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"><i class="fa fa-linkedin"></i></a>
@@ -135,15 +135,15 @@
                       <div class="skill-item">
                         <h5>Python</h5>
                         <div class="progress">
-                          <div class="progress-in" style="width: 86%"></div>
-                          <div class="skill-percent">86%</div>
+                          <div class="progress-in" style="width: 66%"></div>
+                          <div class="skill-percent">66%</div>
                         </div>
                       </div>
                       <div class="skill-item">
                         <h5>PostgreSQL</h5>
                         <div class="progress">
-                          <div class="progress-in" style="width: 86%"></div>
-                          <div class="skill-percent">66%</div>
+                          <div class="progress-in" style="width: 46%"></div>
+                          <div class="skill-percent">46%</div>
                         </div>
                       </div>
                       <div class="skill-item">
@@ -156,7 +156,7 @@
                       <div class="skill-item">
                         <h5>Solid Edge</h5>
                         <div class="progress">
-                          <div class="progress-in" style="width: 50%"></div>
+                          <div class="progress-in" style="width: 60%"></div>
                           <div class="skill-percent">60%</div>
                         </div>
                       </div>
@@ -174,6 +174,7 @@
                             <div class="circle-dot"></div>
                             <h6 class="timeline-date"><i class="fa fa-calendar"></i>2021-2023</h6>
                             <h4 class="timeline-title">Houston Community College</h4>
+                            <p class="timeline-text duration">Houston, TX U.S</p>
                             <p class="timeline-text">Associate Degree in Artificial Inteligence.</p>
                           </div>
                           <!-- End Timeline-item -->
