--- a/index.html
+++ b/index.html
@@ -160,6 +160,20 @@
                           <div class="skill-percent">60%</div>
                         </div>
                       </div>
+                      <div class="skill-item">
+                        <h5>Django Framework</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 68%"></div>
+                          <div class="skill-percent">68%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item">
+                        <h5>Flask</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 80%"></div>
+                          <div class="skill-percent">80%</div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -190,15 +204,16 @@
                           <!-- Timeline-item -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2018-Present</h6>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>Aug 2018 - Present</h6>
                             <h4 class="timeline-title">KAYARN MECHATRONICS</h4>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>Kigali, Rwanda</h6>
                             <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
                           </div>
                           <!-- End Timeline-item -->
                           <!-- Timeline-item -->
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
-                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>2019-2019</h6>
+                            <h6 class="timeline-date"><i class="fa fa-calendar"></i>March 2019 - Aug 2019</h6>
                             <h4 class="timeline-title">Westerwelle Startup Haus Kigali</h4>
                             <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas explicabo alias assumenda nulla ipsam. Ducimus unde deserunt expedita quaerat, esse explicabo itaque ab, dolorem, totam quidem blanditiis. Facilis, alias repudiandae?</p>
                           </div>
@@ -235,14 +250,14 @@
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-laptop"></i></div>
                   <h4>Machine Learning</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur exercitationem ipsa fugiat aliquid, odit aspernatur.</p>
+                  <p>Research, implementation and interpretation of machine learning models and published papers.</p>
                 </div>
               </div>
               <div class="service-item">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-photo"></i></div>
                   <h4>CAD Design</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur exercitationem ipsa fugiat aliquid, odit aspernatur.</p>
+                  <p>3d Design services from concept to production optimisation including reverse engineering.</p>
                 </div>
               </div>
               <div class="service-item">
@@ -255,7 +270,7 @@
               <div class="service-item">
                 <div class="service-item-inner">
                   <div class="icon"><i class="fa fa-film"></i></div>
-                  <h4>GUI Design</h4>
+                  <h4>CNC Programming</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur exercitationem ipsa fugiat aliquid, odit aspernatur.</p>
                 </div>
               </div>
@@ -392,8 +407,8 @@
                   </div>
                   <div class="blog-info ">
                     <h4 class="blog-title">Django Based Car Parking Managment Dashboard</h4>
-                    <p class="blog-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto rem vel ea! Placeat obcaecati dolore inventore itaque id, beatae harum repudiandae, minus.</p>
-                    <p class="blog-tags">Tags : <a href="#">Django</a>, <a href="#">Django-REST-Framework</a>, <a href="#">Heroku</a>, <a href="#">PostgreSQL</a>, <a href="#">Python</a>, <a href="#">HTML</a>, <a href="#">CSS</a></p>
+                    <p class="blog-description">Django built dashboard for parking space managment powered withcomputer vision </p>
+                    <p class="blog-tags">Tags : <a href="#">Django</a>, <a href="#">Django-REST-Framework</a>, <a href="#">Heroku</a>, <a href="#">PostgreSQL</a>, <a href="#">Python</a>, <a href="#">HTML</a>, <a href="#">CSS</a>,<a href="#">CSS</a></p>
                   </div>
                 </div>
               </div>
@@ -459,7 +474,7 @@
               <div class="contact-info-item">
                 <div class="icon"><i class="fa fa-phone"></i></div>
                 <h4>Call Me On</h4>
-                <p>+(250) 783089337</p>
+                <p>+(250)783089337</p>
               </div>
               <!-- End Contact Info Item -->
               <!-- Contact Info Item -->
